--- a/lab02/index.htm
+++ b/lab02/index.htm
@@ -1,4 +1,7 @@
 <html>
+	<h1>Labs:</h1>
+<a href="/lab02">lab02</a><br>
+	
 <body>
 <canvas id='lab02' height='500' width='1200' style='border-width: 3px' />
 <canvas id='lab02Smooth' height='500' width='1200' style='border-width: 3px' />
