--- a/lab03/index.html
+++ b/lab03/index.html
@@ -1,6 +1,6 @@
-<HTML>
-<HEAD>
-<STYLE>
+<html>
+<head>
+<style>
 	body {
 		margin: 0;
 	}
@@ -12,9 +12,9 @@
 	.buttons {
 		margin: 30px 0px 0px 500px;
 	}
-</STYLE>
-</HEAD>
-<BODY>
+</style>
+</head>
+<body>
 	<div class= "canvas">
 		<canvas id='lab03' height='500' width='1000' style='border-width: 3px' />
 	</div>
@@ -149,5 +149,5 @@
 		canvas.addEventListener('click', circleListener, false);
 	}
 </script> 
-</BODY> 
-</HTML>
+</body> 
+</html>
