--- a/lab04/index.html
+++ b/lab04/index.html
@@ -6,7 +6,7 @@
 <script>
 var buffer =[];
 var img = new Image();
-img.src = 'image.png;
+img.src = 'img.png';
 img.onload = function() {
   draw(this);
 };
