--- a/lab04/index.html
+++ b/lab04/index.html
@@ -5,7 +5,7 @@
 <script>
 var buffer =[];
 var img = new Image();
-img.src = 'img.jpg';
+img.src = 'image.jpg';
 img.onload = function() {
   draw(this);
 };
