--- a/lab04/index.html
+++ b/lab04/index.html
@@ -1,11 +1,11 @@
 <html>
 <body>
 
-<canvas id='lab04' height='500' width='1000' style='border-width: 3px' />
+<canvas id='lab04' height='900' width='1200' style='border-width: 3px' />
 <script>
 var buffer =[];
 var img = new Image();
-img.src = 'img.png';
+img.src = 'image.jpg';
 img.onload = function() {
   draw(this);
 };
