--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<h1>Labs:</h1>
+<h1>Лабораторные работы по компьютерной графике:</h1>
 <a href="/lab02">lab02</a><br>
 <a href="/lab03">lab03</a><br>
 <a href="/lab04">lab04</a><br>
 <a href="/lab05">lab05</a><br>
 <a href="/lab06">lab05</a><br>
+
+<h2>Выполнил Цой Игорь ИУ8-52</h2>
