--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Лабораторные работы по компьютерной графике:</h1>
+<h1>Labs:</h1>
 <a href="/lab02">lab02</a><br>
 <a href="/lab03">lab03</a><br>
 <a href="/lab04">lab04</a><br>
