--- a/lab06/index.html
+++ b/lab06/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Cyrus — Beck</title>
@@ -12,12 +10,12 @@
 		<button type="button" onclick="line();" style="width: 100px">Отрезок</button>
 		<div>
 			<button type="button" onclick="polygon()" style="width: 100px; margin-right: 1.5em; float: left;">Многоугольник</button>
-			<p style="margin: 0;padding: 0">Нажать правой кнопкой мыши для завершения фигуры</p>
+			<p style="margin: 0;padding: 0">нажать правой кнопкой мыши для завершения фигуры</p>
 		</div>
 		<button type="button" id="clear" style="width: 100px">Очистить</button>
 	</div>
 	<div>
-		<p>Сначала нарисовать отрезки, затем выбрать область, внутри которой они должны остаться.</p>
+		<p>Сначала нарисовать отрезки, затем выбрать область (выпуклый многоугольник), внутри которой они должны остаться.</p>
 	</div>
 
 	<script>
@@ -113,10 +111,8 @@
 				{
 					if(orient == 'anticlockwise')
 					{
-						if (j == poly.length - 1) 
-              var n = normal(poly[0],poly[j]);
-						else 
-              var n = normal(poly[j+1],poly[j]);
+						if(j == poly.length - 1) var n = normal(poly[0],poly[j]);
+						else var n = normal(poly[j+1],poly[j]);
 					}
 					else if(orient == 'clockwise')
 					{
