--- a/lab06/index.html
+++ b/lab06/index.html
@@ -15,7 +15,7 @@
 		<button type="button" id="clear" style="width: 100px">Очистить</button>
 	</div>
 	<div>
-		<p>Сначала нарисовать отрезки, затем выбрать область (выпуклый многоугольник), внутри которой они должны остаться.</p>
+		<p>Сначала нарисовать отрезки, затем выбрать область, внутри которой они должны остаться.</p>
 	</div>
 
 	<script>
