--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <a href="/lab02">lab02</a><br>
 <a href="/lab03">lab03</a><br>
 <a href="/lab04">lab04</a><br>
+<a href="/lab05">lab05</a><br>
+<a href="/lab06">lab06</a><br>
