--- a/lab07/index.html
+++ b/lab07/index.html
@@ -1,155 +1,137 @@
-<HTML>
-<HEAD>
-<STYLE>
-	body {
-		margin: 0;
-	}
-	#lab03 {
-		border-width: 3px;
-		border-color: #000000;
-		border-style: solid; 
-	}
-	.buttons {
-		margin: 30px 0px 0px 500px;
-	}
-</STYLE>
-</HEAD>
-<BODY>
-	<div class= "canvas">
-		<canvas id='lab03' height='500' width='1000' style='border-width: 3px' />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Fill polygon</title>
+	<style>
+    p{
+      margin: 2px;
+    }
+	</style>
+</head>
+<body>
+	<h1 style = "text-align: center; font-size: 20px; margin: 15px">Заполнение многоугольника</h1>
+	<canvas id="cvs" style="border: 2px solid black" height="700" width="700"></canvas>
+	<div style="display: flex; flex-direction: column;">
+		<button type="button" id="clear" style="width: 100px">Очистить</button>
+		<p>Чтобы завершить многоугольник, кликните дважды</p>
 	</div>
-	<div class = "buttons"> 
-		<button type="button" id="secondButton" onclick="rectFunction()">Rectangle</button> 
-		<button type="button" id="secondButton" onclick="drawFunction()">Draw</button>  		
-	</div>
-	<div>
-		<h1>Rectangle - выбрать точки для многоугольника</h1>
-		<h1>Draw и нажатие на экран - рисование и заполнение многоугольника</h1>	
-	</div>
-<script>
-	var canvas = document.getElementById('lab03');
-	var ctx = canvas.getContext('2d');
-	var buffer=[];
-	
-	function getMousePos(canvas) {
-		return {
-			x: event.clientX - 3,
-			y: event.clientY - 3
-		};
-	}
-	
-	function drawLine(pt1, pt2)
-	{
+
+	<script>
+		var cvs = document.getElementById("cvs"), 
+    ctx = cvs.getContext("2d"),
+		coords = [];
+		var button = document.getElementById('clear');
+		button.addEventListener('click',clear,false);
+		function clear()
+		{
+			ctx.clearRect(0,0,700,700);
+			coords = [];
+		}
+		cvs.addEventListener('click', function(event)
+    {
+        var x, y;
+        var rect = cvs.getBoundingClientRect();
+        x = event.clientX - rect.left;
+        y = event.clientY - rect.top;
+        event.preventDefault();
+        if(event.which == 1)
+        {
+            coords.push([x, y]);
+            if(coords.length == 1) draw__pixel([x, y]);
+            if(coords.length > 1) draw__line(coords[coords.length - 2], coords[coords.length - 1]);
+        }
+    });
+    cvs.addEventListener('dblclick', function(event)
+    {
+        coords.pop();
+        draw__line(coords[coords.length - 1], coords[0]);
+        fill__poly();
+        coords = [];
+    });
+		function draw__pixel(pt)
+		{
+        ctx.fillRect(pt[0], pt[1], 1, 1);
+		}
+		function draw__line(pt1, pt2)
+		{
         ctx.beginPath()
         ctx.lineWidth = 1;
         ctx.strokeStyle = "black";
         ctx.moveTo(pt1[0], pt1[1]);
         ctx.lineTo(pt2[0], pt2[1]);
         ctx.stroke();
-	}
-	
-	function fillFigure()
-	{
-		console.log(buffer);
-        buffer = rastFigure();
-		console.log(buffer);
-        for(var i = 0; i < buffer.length - 2; i++)
+		}
+		function fill__poly()
+		{
+        coords = rast__poly();
+        for(let i = 0; i < coords.length - 2; i++)
         {
-            if(buffer[i][1] == buffer[i+2][1] && buffer[i][1] != buffer[i+3][1]){
-                drawLine(buffer[i],buffer[i+2]);
+            if(coords[i][1] == coords[i+2][1] && coords[i][1] != coords[i+3][1]){
+                draw__line(coords[i],coords[i+2]);
                 i+=2;
             }
-            else if(buffer[i][1] == buffer[i+1][1]){
-                drawLine(buffer[i],buffer[i+1]);
+            else if(coords[i][1] == coords[i+1][1]){
+                draw__line(coords[i],coords[i+1]);
                 i++;
             }
         }
-	}
-		function oneLine(pt1, pt2)
+		}
+		function one__line(pt1, pt2)
 		{
-			if(pt1[1] == pt2[1]){return true;}	
-			return false;
+        if(pt1[1] == pt2[1])
+            return true;
+        return false;
 		}
-		function rastFigure()
+		function rast__poly()
 		{
-			var poly = [];
-			for(var i = 0; i < buffer.length - 1; i++)
-			{
-				if(!oneLine(buffer[i],buffer[i+1])){
-					poly = poly.concat(restLine(buffer[i],buffer[i+1]));
-				}
-				else {poly.push(buffer[i]);}
-			}
-			if(!oneLine(buffer[buffer.length - 1], buffer[0]))
-			{
-				poly = poly.concat(restLine(buffer[buffer.length - 1], buffer[0]));
-			}
-			return poly.sort(sortFunc);
+        var poly = [];
+        for(let i = 0; i < coords.length - 1; i++)
+        {
+            if(!one__line(coords[i],coords[i+1])){
+                  poly = poly.concat(rest__line(coords[i],coords[i+1]));
+            }
+            else poly.push(coords[i]);
+        }
+        if(!one__line(coords[coords.length - 1], coords[0]))
+        {
+            poly = poly.concat(rest__line(coords[coords.length - 1], coords[0]));
+        }
+        return poly.sort(sort__f);
 		}
-		function restLine(pt1, pt2)
+		function rest__line(pt1, pt2)
 		{
-			var y = pt1[1],
-			dx = (pt2[0] - pt1[0])/(pt2[1] - pt1[1]),
-			x = pt1[0],
-			poly = [];
-			if(pt1[1] < pt2[1]){
-				while(y <= pt2[1]){
-					poly.push([x,y]);
-					y++;
-					x += dx;
-				}
-			}
-			else{
-				while(y >= pt2[1]){
-					poly.push([x,y]);
-					y--;
-					x -= dx;
-				}
-			}
-			return poly;
+        var y = pt1[1],
+        dx = (pt2[0] - pt1[0])/(pt2[1] - pt1[1]),
+        x = pt1[0],
+        poly = [];
+        if(pt1[1] < pt2[1]){
+            while(y <= pt2[1]){
+                poly.push([x,y]);
+                y++;
+                x += dx;
+            }
+        }
+        else{
+            while(y >= pt2[1]){
+                poly.push([x,y]);
+                y--;
+                x -= dx;
+            }
+        }
+        return poly;
 		}
-		function sortFunc(pt1,pt2)
+		function sort__f(pt1,pt2)
 		{
-			if(pt1[1] > pt2[1]) return 1;
-			if(pt1[1] < pt2[1]) return -1;
-			if(pt1[1] == pt2[1])
-			{
-				if(pt1[0] > pt2[0]) return 1;
-				if(pt1[0] < pt2[0]) return -1;
-				if(pt1[0] == pt2[0]) return 0;
-			}
+        if(pt1[1] > pt2[1]) return 1;
+        if(pt1[1] < pt2[1]) return -1;
+        if(pt1[1] == pt2[1])
+        {
+            if(pt1[0] > pt2[0]) return 1;
+            if(pt1[0] < pt2[0]) return -1;
+            if(pt1[0] == pt2[0]) return 0;
+        }
 		}
-	
-	var rectListener = function(event) {
-		var mousePos = getMousePos(canvas);
-		buffer.push([mousePos.x,mousePos.y]);
-		console.log(buffer);
-	}
-	var drawListener = function(event) {
-		console.log(buffer);
-		var tmpBuffer = [];
-		tmpBuffer = buffer;
-		for(var j = 0; j < tmpBuffer.length; j++) {
-			if(j == tmpBuffer.length - 1){
-				tmpBuffer = buffer;
-				drawLine(tmpBuffer[j], tmpBuffer[0]);
-			}
-			else {tmpBuffer = buffer; drawLine(tmpBuffer[j], tmpBuffer[j+1]);}
-		}
-		fillFigure();
-		buffer = [];
-	}
-		
-	
-	
-	function rectFunction() {
-		canvas.removeEventListener('click', drawListener, false);
-		canvas.addEventListener('click', rectListener, false);
-	}
-	function drawFunction() {
-		canvas.removeEventListener('click', rectListener, false);
-		canvas.addEventListener('click', drawListener, false);
-	}
-</script> 
-</BODY> 
-</HTML>
+	</script>
+</body>
+</html>
