--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@
 <a href="/lab05">lab05</a><br>
 <a href="/lab06">lab06</a><br>
 <a href="/lab07">lab07</a><br>
+<a href="/lab07">lab08</a><br>
+<a href="/lab07">lab09</a><br>
 <a href="/RK1">RK1</a><br>
